<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/titleModifQuestion"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="28dp"
        android:text="@string/txt_editQuestion"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textModifQuizz"
        app:layout_constraintStart_toEndOf="@+id/btn_home"
        app:layout_constraintTop_toTopOf="@+id/btn_home" />

    <TextView
        android:id="@+id/textModifQuizz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="118dp"
        android:text="@string/txt_editExplain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/questionsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="48dp"
        android:background="@android:color/darker_gray"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_upQ"
        tools:listitem="@layout/editquestion_recyclerview_item" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/questionEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_defaultQuestion"
        app:layout_constraintBottom_toTopOf="@+id/questionsList"
        app:layout_constraintEnd_toStartOf="@+id/btn_upQ"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textModifQuizz" />

    <Button
        android:id="@+id/btn_upQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="11dp"
        android:text="@string/btn_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/questionEdit"
        app:layout_constraintTop_toBottomOf="@+id/textModifQuizz" />
</android.support.constraint.ConstraintLayout>